--- a/Movie.ipynb
+++ b/Movie.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Movie.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPpe5w2vXowjojlE1BWffgn",
+      "authorship_tag": "ABX9TyPFx+8sVGy7gWKOzZXXGkyt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1349,6 +1349,39 @@
             "tags": []
           },
           "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y1pupib7HlVU",
+        "outputId": "26b71342-3c31-416e-b813-17e7e78bb690",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "movies.info()\n"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 9742 entries, 0 to 9741\n",
+            "Data columns (total 4 columns):\n",
+            " #   Column   Non-Null Count  Dtype \n",
+            "---  ------   --------------  ----- \n",
+            " 0   movieId  9742 non-null   int64 \n",
+            " 1   title    9742 non-null   object\n",
+            " 2   genres   9742 non-null   object\n",
+            " 3   year     5613 non-null   object\n",
+            "dtypes: int64(1), object(3)\n",
+            "memory usage: 304.6+ KB\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
